styling and visibility fixes

--- a/resources/sass/widgets/tv/_youtube.scss
+++ b/resources/sass/widgets/tv/_youtube.scss
@@ -7,6 +7,13 @@
       width: 33.33%;
     }
   }
+
+  &:first-child {
+    margin-top: 20px;
+  }
+  &:last-child {
+    margin-bottom: 20px;
+  }
 }
 
 .youtube-player {
